[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/GUI/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://Src/GUI/PauseScene.gd" type="Script" id=2]

[node name="PauseScene" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.129412, 0.129412, 0.443137 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 80.0
margin_right = -100.0
margin_bottom = -80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1080.0
margin_bottom = 560.0

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 1080.0
margin_bottom = 278.0
size_flags_vertical = 3
text = "Resume"
flat = true

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 282.0
margin_right = 1080.0
margin_bottom = 560.0
size_flags_vertical = 3
text = "Exit"
flat = true
[connection signal="pressed" from="MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
